--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -4,24 +4,42 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
+
+  background-color: rgba(0, 0, 0, 0.5);
+
   align-items: center;
   color: rgba(0, 0, 0, 0.5);
 }
 
 .popup-content {
-  background: white;
-  padding: 20px;
-  border-radius: 8px;
+  padding: 41px 150px;
+
+  border-radius: 10px;
+  background: rgb(25, 30, 46);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
 }
 
 .popup-content h2 {
-  margin-top: 0;
+  margin: 0 0 50px;
 }
 
 .popup-content button {
-  margin-top: 10px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: 2px solid rgb(54, 87, 203);
+  box-shadow: 0px 0px 7px 0px rgba(72, 113, 255, 0.6);
+  background: rgb(54, 87, 203);
+
+  color: #fff;
+}
+
+.popup-content button:hover {
+  border: 2px solid rgb(255, 255, 255);
 }
