--- a/src/index.scss
+++ b/src/index.scss
@@ -195,7 +195,7 @@
     @apply rounded-[10px] text-xs font-semibold bg-yellows-lime  text-darks-primary;
 
     &:hover {
-      @apply bg-white transition-all duration-300 ease-in-out;
+      @apply bg-yellows-butter transition-all duration-300 ease-in-out;
     }
 
     &:active {
@@ -209,5 +209,23 @@
     &:disabled {
       @apply opacity-50 cursor-not-allowed bg-slate-400 text-white transform-none filter-none;
     }
+  }
+  //
+  // ------------ INPUT ---------
+
+  .input-default-white {
+    @apply rounded-[10px] text-darks-primary placeholder:text-darks-primary placeholder:text-opacity-40 placeholder:font-normal placeholder:text-base font-medium text-lg py-5 px-8;
+
+    &:focus-visible {
+      @apply border-none outline-none;
+    }
+  }
+
+  // ---------- Form -------------
+  .wrapper-search-form {
+    @apply fixed top-0 left-0 right-0 bottom-0 flex justify-center items-center;
+  }
+  .form-default-white {
+    @apply rounded-[10px] bg-white h-[76px] pr-2.5;
   }
 }
